# P03-Brewbucks

./: .gitignore  .terraform.lock.hcl  README.md  database.tf  demo.md  ecs.tf  images.tf  index.html  libs.md  loadbalancer.tf  main.tf  package-lock.json  package.json  tailwind.config.js  url.txt
.github/workflows/: api-test.yml  compile-latex.yml
.terraform/: environment  terraform.tfstate
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  endpoints.http  pyproject.toml
backend/brewbucks/: __init__.py
backend/brewbucks/models/: __init__.py  menu_item.py  order.py  order_items.py  payments.py  rewards.py  users.py
backend/brewbucks/tests/: test_views.py
backend/brewbucks/views/: routes.py
brewbucks/: package-lock.json  package.json
front-end/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  vite.config.js
front-end/src/: Admin.jsx  App.jsx  Home.jsx  Login.jsx  Orders.jsx  Purchase.jsx  SignUp.jsx  api.js  config.js  main.jsx  products.js  styles.css
front-end/src/components/: AdminOrder.jsx  Avatar.jsx  AvatarMenu.jsx  Button.jsx  Cart.jsx  CartItem.jsx  Coffee.jsx  Input.jsx  Menu.jsx  Navbar.jsx  (+2 more)
k6_test/: README.md  create_menu_item.js  create_order.js  delete_menu_item.js  delete_test_menu_item.js  get_menu_item.js  get_user_info.js  result.txt  sign_up_and_delete_user.js
model/adrs/: adr-1.tex  decide-against-event-architecture.md
report/: latexmkrc.txt  report.tex
src/: App.jsx  Home.jsx  Login.jsx  main.jsx
src/components/: Cart.jsx  CartItem.jsx  Coffee.jsx  Menu.jsx  Navbar.jsx  Store.jsx
(+8 files in other folders)
